--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jsdoc-swagger": "^1.8.0",
+    "joi": "^17.9.2",
     "pg": "^8.10.0"
   },
   "devDependencies": {
