--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "express-jsdoc-swagger": "^1.8.0",
     "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.10.0"
   },
   "devDependencies": {
