--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express-jsdoc-swagger": "^1.8.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "eslint": "^8.39.0",
